--- a/HTML-CSS-Study/HTML-CSS-I/index.html
+++ b/HTML-CSS-Study/HTML-CSS-I/index.html
@@ -12,7 +12,16 @@
 <body>
 
     <div class="header">
-
+        <div class="header-logo">
+            Progate
+        </div>
+        <div class="header-list">
+            <ul>
+                <li>Tentang</li>
+                <li>Pelajaran</li>
+                <li>Hubungi Kami</li>
+            </ul>
+        </div>
     </div>
 
 
