membuat struktur footer

--- a/HTML-CSS-Study/HTML-CSS-I/index.html
+++ b/HTML-CSS-Study/HTML-CSS-I/index.html
@@ -31,6 +31,19 @@
 
 
     <div class="footer">
+        <div class="footer-logo">
+            Progate
+        </div>
+
+        <div class="footer-list">
+            <ul>
+                <li>Tentang</li>
+                <li>Karier</li>
+                <li>Hubungi Kami</li>
+            </ul>
+        </div>
+
+    </div>
 
 </body>
 
