--- a/HTML-CSS-Study/HTML-CSS-I/index.html
+++ b/HTML-CSS-Study/HTML-CSS-I/index.html
@@ -27,6 +27,40 @@
 
     <div class="main">
 
+        <div class="copy-container">
+            <h1>HELLO WORLD<span>.</span></h1>
+            <h2>Ayo belajar coding</h2>
+
+        </div>
+
+        <div class="contents">
+            <h3>Pelajaran</h3>
+
+            <div class="contents-item">
+                <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg" alt="">
+                <p>HTML & CSS</p>
+            </div>
+
+            <div class="contents-item">
+                <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg" alt="" />
+                <p>PHP</p>
+            </div>
+
+            <div class="contents-item">
+                <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg" alt="" />
+                <p>Ruby</p>
+            </div>
+
+            <div class="contents-item">
+                <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg" alt="" />
+                <p>Swift</p>
+            </div>
+        </div>
+
+        <div class="contact-form">
+
+        </div>
+
     </div>
 
 
