--- a/HTML-CSS-Study/HTML-CSS-I/index.html
+++ b/HTML-CSS-Study/HTML-CSS-I/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="contents">
-            <h3>Pelajaran</h3>
+            <h3 class="section-title">Pelajaran</h3>
 
             <div class="contents-item">
                 <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg" alt="">
@@ -58,7 +58,17 @@
         </div>
 
         <div class="contact-form">
+            <h3 class="section-title">Hubungi kami</h3>
 
+            <p>Email (Wajib Diisi)</p>
+            <input type="text">
+
+            <p>Pesan (Wajib Diisi)</p>
+            <textarea></textarea>
+
+            <p>*Bidang wajib diisi.</p>
+
+            <input class="contact-submit" type="submit" value="Kirim">
         </div>
 
     </div>
